--- a/game-client/package.json
+++ b/game-client/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "yarn-install": "^1.0.0",
+    "axios": "^0.18.0"  
   },
   "scripts": {
     "start": "react-scripts start",
